# Cordyceps-stalk

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
data/locale/: en-US.ini
include/: ffmpeg-mux.h  obs-ffmpeg-formats.h
src/: cordyceps-stalk-encoder-DEP.c  cordyceps-stalk-encoder-DEP.h  cordyceps-stalk-encoder.c  cordyceps-stalk-encoder.h  cordyceps-stalk-output-DEP.c  cordyceps-stalk-output.c  cordyceps-stalk-output.h  cordyceps-stalk.c  plugin-main.c  plugin-support.c.in  plugin-support.h
